# backend/config/routes.rb
@@ -10,6 +10,7 @@ Rails.application.routes.draw do
 
   resources :chat_sessions, only: [:create] do
     resources :messages, only: [:index, :create], module: :chat_sessions
+    resources :suggestions, only: [:index], module: :chat_sessions
     post :summarize, on: :member
   end
 end
